Fixes enviroment z-index

--- a/assets/styles/debug/_environment-bar.scss
+++ b/assets/styles/debug/_environment-bar.scss
@@ -23,6 +23,7 @@ body.mdg-environment-bar-enabled {
 	text-transform: uppercase;
 	white-space: nowrap;
 	overflow: hidden;
+	z-index: 9999;
 
 	.admin-bar & {
 		top: 32px;
